feat: workspace restructure + Tauri desktop app
Restructure single-crate project into Cargo workspace:
- llmfit-core: core library (hardware detection, model fitting, providers)
- llmfit-tui: CLI/TUI binary (unchanged user experience)
- llmfit-desktop: macOS desktop app via Tauri 2

The workspace split enables the desktop app to reuse core logic
while keeping the CLI/TUI as the default build target.

Moved SortColumn to core crate for shared use across frontends.

Desktop app features:
- System specs display (RAM, CPU, GPU)
- Model compatibility table with fit scoring
- Dark theme UI using project icon from assets/icon.svg
- Tauri 2 with minimal permissions

No changes to hf_models.json — data file moved as-is.

Signed-off-by: Three Foxes (in a Trenchcoat) <threefoxes53235@gmail.com>
Signed-off-by: Three Foxes (in a Trenchcoat) <threefoxesyes3inatrenchcoat@gmail.com>

--- a/llmfit-desktop/ui/index.html
+++ b/llmfit-desktop/ui/index.html
@@ -54,12 +54,13 @@
             <th>Fit</th>
             <th>Mode</th>
             <th>Score</th>
+            <th>RAM Req</th>
             <th>Est. TPS</th>
             <th>Use Case</th>
           </tr>
         </thead>
         <tbody id="models-body">
-          <tr><td colspan="8" class="loading">Loading models...</td></tr>
+          <tr><td colspan="9" class="loading">Loading models...</td></tr>
         </tbody>
       </table>
     </div>
